gitops/overlays/garu-home/links/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: garu-links
  labels:
    namespace: garu-links
